2013-09-05 23:50 Yao Liu <xuanyao0111@gmail.com>
-Create this project
-Create app-1 named mapper, continue to finish it.
 import net package which is implement by our group.
 create a class named Mapper(need to finish)

2013-09-06 22:35 Yao Liu <xuanyao0111@gmail.com>
-Add functions in class Mapper
 Class mapper has not been finished

2013-09-06 23:40 Yao Liu <xunayao0111@gmail.com>
-Fix some error in CMakeLists.txt

2013-09-06 23:50 Yao Liu <xunyao0111@gmail.com>
-Create another project as server application